# ha-asusrouter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  hacs.json  info.md  inlang.config.js  mypy.ini  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  device_support.yml  feature_request.yml
.github/workflows/: asusrouter-bot.yml  build.yaml  ci.yaml  release-drafter.yml  update-dev.yml
custom_components/asusrouter/: __init__.py  aimesh.py  binary_sensor.py  bridge.py  button.py  client.py  compilers.py  config_flow.py  const.py  const_v1.py  dataclass.py  device_tracker.py  diagnostics.py  entity.py  helpers.py  light.py  manifest.json  migrate.py  router.py  sensor.py  services.yaml  strings.json  switch.py  update.py
custom_components/asusrouter/modules/: __init__.py  aura.py  firmware.py
custom_components/asusrouter/translations/: cs.json  de.json  en.json  es-ES.json  es.json  fr.json  hu.json  nl.json  pt-BR.json  pt.json  ru.json  sk.json  uk.json
docs/: dashboards.md  setup.md
tests/: __init__.py  conftest.py  helpers.py  test_bridge_99_properties.py
